[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/font/VGAfontdata.tres" type="DynamicFontData" id=3]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.5;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/lod = 0.5

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 4
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="UI"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer"]
margin_right = 512.0
margin_bottom = 288.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 462.0
margin_bottom = 238.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="UI/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 412.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.564706, 0.145098, 0.145098, 1 )
custom_fonts/font = SubResource( 6 )
text = "Carvest"
align = 1
valign = 1

[node name="MainMenu" type="CenterContainer" parent="UI/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 53.0
margin_right = 412.0
margin_bottom = 184.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer/VBoxContainer/MainMenu"]
margin_left = 131.0
margin_right = 281.0
margin_bottom = 131.0
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 25

[node name="PlayBtn" type="Button" parent="UI/PanelContainer/MarginContainer/VBoxContainer/MainMenu/VBoxContainer"]
margin_right = 150.0
margin_bottom = 27.0
rect_min_size = Vector2( 150, 24 )
theme = ExtResource( 2 )
text = "Play"

[node name="EditBtn" type="Button" parent="UI/PanelContainer/MarginContainer/VBoxContainer/MainMenu/VBoxContainer"]
margin_top = 52.0
margin_right = 150.0
margin_bottom = 79.0
rect_min_size = Vector2( 150, 24 )
theme = ExtResource( 2 )
text = "Level Editor"

[node name="AudioBTN" type="Button" parent="UI/PanelContainer/MarginContainer/VBoxContainer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
margin_top = 104.0
margin_right = 150.0
margin_bottom = 131.0
rect_min_size = Vector2( 150, 24 )
theme = ExtResource( 2 )
toggle_mode = true
text = "Audio ON"

[node name="LevelMenu" type="ScrollContainer" parent="UI/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 53.0
margin_right = 412.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 175 )
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/VBoxContainer/LevelMenu"]
margin_right = 412.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="LevelMenuLevels" type="HBoxContainer" parent="UI/PanelContainer/MarginContainer/VBoxContainer/LevelMenu/MarginContainer"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 10.0
margin_right = 402.0
margin_bottom = 165.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[connection signal="pressed" from="UI/PanelContainer/MarginContainer/VBoxContainer/MainMenu/VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="UI/PanelContainer/MarginContainer/VBoxContainer/MainMenu/VBoxContainer/EditBtn" to="." method="_on_EditBtn_pressed"]
[connection signal="toggled" from="UI/PanelContainer/MarginContainer/VBoxContainer/MainMenu/VBoxContainer/AudioBTN" to="." method="_on_AudioBTN_toggled"]
